kustomize/base/web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dealbot-web
  labels:
    app.kubernetes.io/name: dealbot-web
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: dealbot-web
